--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <!-- <link href="assets/img/favicon.png" rel="icon"> -->
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -72,6 +72,7 @@
                         </ul>
                     </li> -->
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="#docut">Document</a></li>
                     <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -92,7 +93,7 @@
                     <h2>We are team of talented designers making USSD accessible to all</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                        <a href="https://www.youtube.com/waystudio" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -555,7 +556,7 @@
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="box">
                             <h3>Basic Plan</h3>
-                            <h4><sup>$</sup>50<span>per month</span></h4>
+                            <h4><sup>$</sup>40<span>per month</span></h4>
                             <ul>
                                 <li><i class="bx bx-check"></i> Menu navigation with up to 5 options </li>
                                 <li><i class="bx bx-check"></i> Text-based responses </li>
@@ -570,7 +571,7 @@
                     <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
                         <div class="box featured">
                             <h3>Business Plan</h3>
-                            <h4><sup>$</sup>98<span>per month</span></h4>
+                            <h4><sup>$</sup>78<span>per month</span></h4>
                             <ul>
                                 <li><i class="bx bx-check"></i> Executive summary</li>
                                 <li><i class="bx bx-check"></i> Company description</li>
@@ -585,7 +586,7 @@
                     <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
                         <div class="box">
                             <h3>Developer Plan</h3>
-                            <h4><sup>$</sup>135<span>per month</span></h4>
+                            <h4><sup>$</sup>92<span>per month</span></h4>
                             <ul>
                                 <li><i class="bx bx-check"></i> Technical requirements </li>
                                 <li><i class="bx bx-check"></i> User interface design </li>
@@ -775,7 +776,7 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h3>WayStudio</h3>
                         <p>
-                            A108 Adam Street <br> C12, GT-021-025-01<br> Tema <br><br>
+                            A408 Adum Street <br> C12, GT-021-025-01<br> Tema <br><br>
                             <strong>Phone:</strong> +233 266 212 420<br>
                             <strong>Email:</strong> info@Waystudio.com<br>
                         </p>
@@ -784,9 +785,9 @@
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
                         </ul>
@@ -795,8 +796,8 @@
                     <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#">Customer USSD application</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design & Development</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
@@ -828,7 +829,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-                Designed by <a href="https://bootstrapmade.com/">WayStudio</a>
+                Designed by <a href="https://www.linkedin.com/in/yao-adzikah">WayStudio</a>
             </div>
         </div>
     </footer>
