--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             </div>
         </section>
-        <!-- End Cliens Section -->
+        <!End Cliens Section -->
 
         <!-- ======= About Us Section ======= -->
         <section id="about" class="about">
